<resources>
    <string name="app_name">MyCalculator</string>
    <string name="caltext">1234</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_Divide">/</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_Multiply">*</string>
    <string name="add">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="Sub">-</string>
    <string name="Equal">=</string>
    <string name="ans">ANS</string>
    <string name="dot">.</string>
    <string name="_1234">1234</string>
</resources>