<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvCalc"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_weight="1"
        android:text="@string/_1234"
        android:gravity="end|bottom"
        android:textSize="50sp"
        android:background="@color/black"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_Divide"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black"
        android:textColor="@color/blue"
        >

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_Multiply"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black"
        android:textColor="@color/blue">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black"
        android:textColor="@color/blue">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/ac"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>


        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>



        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Sub"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnANS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/ans"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>
        <Button
            android:id="@+id/btnDEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:onClick="onDelete"
            android:text="DEL"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:padding="15sp"/>

    </LinearLayout>
</LinearLayout>

